apps/immich/k8s/valkey.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-valkey
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-valkey
  strategy:
    type: Recreate
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: immich-valkey
    spec:
      containers:
        - name: valkey
          image: "valkey/valkey:9@sha256:8e8d64b405ce18f41b8e5ee20aa4687a8ed0022d1298f2ce31cdcf3a76e09411"
          ports:
            - name: redis
              containerPort: 6379
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 10m
              memory: 64Mi
          livenessProbe:
            exec:
              command: ["valkey-cli", "ping"]
            periodSeconds: 30
          readinessProbe:
            exec:
              command: ["valkey-cli", "ping"]
            periodSeconds: 10
          startupProbe:
            exec:
              command: ["valkey-cli", "ping"]
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 30
          securityContext:
            capabilities:
              drop: ["ALL"]
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 999
            runAsGroup: 999
            seccompProfile:
              type: RuntimeDefault
