apps/immich/k8s/db.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-db-legacy
  namespace: immich
spec:
  type: ClusterIP
  selector:
    app: immich-db-legacy
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
      protocol: TCP
