apps/immich/k8s/valkey.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-valkey
  namespace: immich
spec:
  type: ClusterIP
  selector:
    app: immich-valkey
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: redis
