apps/immich/k8s/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: immich
spec:
  parentRefs:
    - name: homelab
      namespace: traefik
  hostnames:
    - immich.biplane.v6.rocks
  rules:
    - backendRefs:
        - name: immich
          port: 80
